--- a/estilos.css
+++ b/estilos.css
@@ -1,28 +1,28 @@
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
 
-.contenedor{
-    background: cadetblue;
-    width: 100vw;
-    height: 100vh;
-    text-align: center;
+.contenedor {
+  background: cadetblue;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
 }
 
-p{
-    font-size: xx-large;
-    padding: 15%;
+h1 {
+  font-size: xx-large;
+  padding: 15%;
 }
 
-button{
-    font-size: xx-large;
-    padding: 0.75em;
+button {
+  font-size: xx-large;
+  padding: 0.75em;
 }
 
-#yesBtn{
-    transform: translate(-100%,0);
+#yesBtn {
+  transform: translate(-100%, 0);
 }
 
-#noBtn{
-    position: absolute;
+#noBtn {
+  position: absolute;
 }
